:sparkles: add getPhrases
