# SparkleClient/Classes/OpenAPIs/Models/UserInPhrases.swift
@@ -1,0 +1,24 @@
+//
+// UserInPhrases.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+/** Phraseが参照しているユーザーデータ */
+public struct UserInPhrases: Codable { 
+
+
+    public var name: String?
+    public var avatarUrl: String?
+    public var id: Double?
+
+    public init(name: String?, avatarUrl: String?, id: Double?) {
+        self.name = name
+        self.avatarUrl = avatarUrl
+        self.id = id
+    }
+
+}
